<resources>
    <string name="app_name">Job Genius</string>
    <!--  Strings used for fragments for navigation  -->
    <string name="action_settings">Settings</string>

    <!--  Job searching activity  -->
    <string name="search_fragment_label">Search Fragment</string>
    <string name="description_filter_text_field_label">Filter by title, benefits, companies, expertise</string>
    <string name="remote_checkbox_label">Only remote jobs</string>
    <string name="search_button">Find jobs</string>
    <string name="job_list_fragment_label">Job List Fragment</string>
    <string name="job_card_item_title">Title: </string>
    <string name="job_card_item_company">Company: </string>
    <string name="job_card_item_remote">Location: </string>
    <string name="job_card_item_more_info">more</string>
    <string name="job_card_item_fav_button_alt">favorite</string>
    <string name="job_card_item_apply_url">Apply now</string>
    <string name="job_card_item_start_tracking">Track this offer</string>
    <string name="job_details_description_label">Description</string>

    <!-- Log in fragment-->
    <string name="login_fragment_label">Login</string>
    <string name="action_login">Account</string>
    <!--  User details -->
    <string name="userWelcomeText">Login with Google!</string>
    <string name="userEmailText"></string>

    <!--  Offer tracking -->
    <!-- Steps -->
    <string name="tracking_step_1">1. Gather information about the job and the company</string>
    <string name="tracking_step_2">2. Apply to the job in the official web site</string>
    <string name="tracking_step_3">3. Prepare the interview(s)</string>
    <string name="tracking_step_4">4. Go to the interview(s)</string>
    <string name="tracking_step_5">5. Request feedback from the company</string>
    <!-- labels -->
    <string name="tracked_offer_title_label">Title: </string>
    <string name="tracked_offer_last_update_label">Last update:</string>
    <string name="tracked_offer_abort_button_label">ABORT</string>
    <string name="tracked_offer_next_step_button_label">next step</string>

    <!--  Bottom navigation labels  -->
    <string name="bottom_nav_search">Discover</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_applications">My applications</string>
    <string name="action_favorites">favorites</string>
    <string name="action_search">search</string>
    <string name="job_fav_list_fragment_label">Job fav List fragment</string>

</resources>