<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/trackingStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_step_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/trackingStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_step_2"
        app:layout_constraintTop_toBottomOf="@id/trackingStep1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/trackingStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_step_3"
        app:layout_constraintTop_toBottomOf="@id/trackingStep2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/trackingStep4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_step_4"
        app:layout_constraintTop_toBottomOf="@id/trackingStep3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/trackingStep5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_step_5"
        app:layout_constraintTop_toBottomOf="@id/trackingStep4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/fab_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>