<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SearchFragment">
    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.canonicalexamples.jobgenius.view.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_JobListFragment"
            app:destination="@id/JobListFragment" />
    </fragment>
    <fragment
        android:id="@+id/JobListFragment"
        android:name="com.canonicalexamples.jobgenius.view.JobListFragment"
        android:label="@string/job_list_fragment_label"
        tools:layout="@layout/activity_job_listing">

        <action
            android:id="@+id/action_JobListFragment_to_JobDetailsFragment"
            app:destination="@+id/JobDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/JobDetailsFragment"
        android:name="com.canonicalexamples.jobgenius.view.JobDetailsFragment"
        android:label="@string/job_details_description_label"
        tools:layout="@layout/job_details">

        <action
            android:id="@+id/action_JobDetailsFragment_to_OfferTrackingFragment"
            app:destination="@+id/OfferTrackingFragment" />
        <action
            android:id="@+id/action_JobDetailsFragment_to_JobApplicationWebFragment"
            app:destination="@+id/JobApplicationWebFragment"/>
    </fragment>

    <fragment
        android:id="@+id/OfferTrackingFragment"
        android:name="com.canonicalexamples.jobgenius.view.OfferTrackingFragment"
        tools:layout="@layout/activity_tracked_offer_listing">
    </fragment>

    <fragment
        android:id="@id/JobApplicationWebFragment"
        android:name="com.canonicalexamples.jobgenius.view.JobApplicationWebFragment"
        tools:layout="@layout/fragment_job_application_web">
    </fragment>
</navigation>
