<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.JobGeniusActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_application"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_here"
        android:text="@string/job_card_item_start_tracking" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_link"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_here"
        android:text="@string/job_card_item_apply_url"/>

    <include
        android:id="@+id/bottom_navigation_here"
        layout="@layout/fragment_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/comp_logo"
        android:layout_width="105dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/rocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <include
        layout="@layout/fragment_job_basic_info"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comp_logo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/comp_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/job_details_description_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="Job description"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_label" />

</androidx.constraintlayout.widget.ConstraintLayout>